Cleaned up module-building files

--- a/interfaces/javascript/emll_module/CMakeLists.txt
+++ b/interfaces/javascript/emll_module/CMakeLists.txt
@@ -27,14 +27,12 @@ find_program(NPM_EXECUTABLE npm)
 if(NPM_EXECUTABLE)
     message(STATUS "Found npm at ${NPM_EXECUTABLE}")
 
+    set (MODULE_BUILD_COMMAND build)
     if(WIN32)
-        set (MODULE_BUILD_COMMAND buildwin)
         set (MODULE_COPY_COMMAND copyWindowsLib)
     elseif(APPLE)
-        set (MODULE_BUILD_COMMAND buildmac)
         set (MODULE_COPY_COMMAND copyMacLib)
     elseif(UNIX)
-        set (MODULE_BUILD_COMMAND buildlinux)
         set (MODULE_COPY_COMMAND copyLinuxLib)
     endif()
 
@@ -47,24 +45,24 @@ if(NPM_EXECUTABLE)
         add_custom_target(${PROJ_NAME} ALL
             COMMAND ${NPM_EXECUTABLE} run ${MODULE_BUILD_COMMAND}
             DEPENDS EMLL_javascript
-            WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
+            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
     endif()
 
     foreach(MODULE_FILE ${MODULE_FILES})
         add_custom_command(TARGET ${PROJ_NAME} 
                         PRE_BUILD
-                        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} 
-                        COMMAND ${CMAKE_COMMAND} -E copy ${MODULE_FILE} ${CMAKE_CURRENT_BINARY_DIR})
+                        COMMAND ${CMAKE_COMMAND} -E copy ${MODULE_FILE} ${CMAKE_CURRENT_BINARY_DIR}
+                        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
     endforeach()
 
-    add_custom_command(TARGET ${PROJ_NAME} PRE_BUILD
+    add_custom_command(TARGET ${PROJ_NAME} 
+                    PRE_BUILD
                     COMMAND ${NPM_EXECUTABLE} install
-                    DEPENDS EMLL_javascript common dataset evaluators linear lossFunctions math model nodes predictors trainers utilities
-                    WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
+                    DEPENDS EMLL_javascript common data evaluators lossFunctions math model nodes predictors trainers utilities compiler emitters
+                    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
                     COMMENT "Installing prerequisites"
                     VERBATIM)
 endif()
-
 
 #
 # add tests
