--- a/interfaces/javascript/emll_module/package.json
+++ b/interfaces/javascript/emll_module/package.json
@@ -6,10 +6,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "install": "echo ",
     "build": "node-gyp rebuild --runtime=electron --target=1.4.4 --arch-x64 --dist-url=https://atom.io/download/atom-shell",
+    "build:mac": "npm run build && npm run copy:mac",
+    "build:win": "npm run build && npm run copy:win",
+    "build:linux": "npm run build && npm run copy:linux",
     "build:test": "node-gyp rebuild",
-    "buildmac": "npm run build && ./copyMacLib.sh",
-    "buildwin": "npm run build && copyWindowsLib",
-    "buildlinux": "npm run build && ./copyLinuxLib.sh",
+    "copy:mac": "source copyMacLib.sh",
+    "copy:linux":"source copyLinuxLib.sh",
+    "copy:win":"copyWindowsLib",
     "preinstall": "",
     "preuninstall": "rm -rf build/*"
   },
