--- a/.gitignore
+++ b/.gitignore
@@ -236,3 +236,5 @@ dist/
 
 interfaces/javascript/emll_module/CMakeFiles/
 interfaces/javascript/emll_module/test/js/Testing/
+yotta_modules/
+yotta_targets/
