--- a/interfaces/javascript/emll_module/package.json
+++ b/interfaces/javascript/emll_module/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "install": "echo ",
-    "build": "buildme",
-    "buildmac": "npm install && node-gyp rebuild && ./copyMacLib.sh",
-    "buildwin": "npm install && node-gyp rebuild --target=0.36.7 --arch-x64 --dist-url=https://atom.io/download/atom-shell && copyWindowsLib",
-    "buildlinux": "npm install && node-gyp rebuild && ./copyLinuxLib.sh",
-    "buildwintest": "npm install && node-gyp rebuild && copyWindowsLib",
+    "build": "node-gyp rebuild --runtime=electron --target=1.4.4 --arch-x64 --dist-url=https://atom.io/download/atom-shell",
+    "build:mac": "npm run build && npm run copy:mac",
+    "build:win": "npm run build && npm run copy:win",
+    "build:linux": "npm run build && npm run copy:linux",
+    "build:test": "node-gyp rebuild",
+    "copy:mac": "source copyMacLib.sh",
+    "copy:linux":"source copyLinuxLib.sh",
+    "copy:win":"copyWindowsLib",
     "preinstall": "",
     "preuninstall": "rm -rf build/*"
   },
