--- a/tools/utilities/apply/CMakeLists.txt
+++ b/tools/utilities/apply/CMakeLists.txt
@@ -13,9 +13,10 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
   add_compile_options(-std=c++1y)
 endif()
 
-set (SRC src/main.cpp)
+set (SRC src/ApplyArguments.cpp 
+         src/main.cpp)
 
-set (INCLUDE )
+set (INCLUDE include/ApplyArguments.h)
 
 source_group("src" FILES ${SRC})
 source_group("include" FILES ${INCLUDE})
