--- a/.gitignore
+++ b/.gitignore
@@ -238,3 +238,6 @@ interfaces/javascript/emll_module/CMakeFiles/
 interfaces/javascript/emll_module/test/js/Testing/
 yotta_modules/
 yotta_targets/
+
+LaunchXslt/bin/**
+LaunchXslt/obj/**
