--- a/interfaces/javascript/CMakeLists.txt
+++ b/interfaces/javascript/CMakeLists.txt
@@ -10,3 +10,8 @@ generate_interface(javascript ${CMAKE_CURRENT_SOURCE_DIR} "" "")
 add_dependencies(EMLL_javascript EMLL_common)
 
 add_subdirectory(emll_module)
+
+if(WIN32)
+# add_subdirectory(Swig2Typescript)
+endif()
+
