--- a/interfaces/javascript/CMakeLists.txt
+++ b/interfaces/javascript/CMakeLists.txt
@@ -10,4 +10,7 @@ generate_interface(javascript ${CMAKE_CURRENT_SOURCE_DIR} "" "")
 add_dependencies(EMLL_javascript EMLL_common)
 
 add_subdirectory(emll_module)
-add_subdirectory(swigToTypescript)
+
+if(WIN32)
+    add_subdirectory(swigToTypescript)
+endif()
