Added LLVM search path to find default-installed LLVM on Mac

--- a/interfaces/CMakeLists.txt
+++ b/interfaces/CMakeLists.txt
@@ -7,7 +7,8 @@ include (CommonInterfaces)
 if(WIN32)
   include (LLVMSetup)
 else()
-  find_package(LLVM CONFIG)
+  find_package(LLVM REQUIRED CONFIG 
+    PATHS /usr/local/opt/llvm /usr/local/opt/llvm/lib/cmake/llvm )
   if(LLVM_FOUND)
     include_directories(${LLVM_INCLUDE_DIRS})
     add_definitions(${LLVM_DEFINITIONS})
