CMake file cleanup

--- a/examples/python/CMakeLists.txt
+++ b/examples/python/CMakeLists.txt
@@ -6,8 +6,5 @@ add_custom_target(python_examples ALL DEPENDS ${PYTHON_EXAMPLES} SOURCES ${PYTHO
 
 # copy python example code
 foreach(PY_FILE ${PYTHON_EXAMPLES})
-    add_custom_command(TARGET python_examples POST_BUILD
-                    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} 
-                    COMMAND ${CMAKE_COMMAND}
-                    -E copy ${PY_FILE} ${CMAKE_CURRENT_BINARY_DIR})
+    configure_file(${PY_FILE} ${PY_FILE} COPYONLY)
 endforeach()
