--- a/interfaces/python/test/CMakeLists.txt
+++ b/interfaces/python/test/CMakeLists.txt
@@ -25,10 +25,7 @@ add_custom_target(${PROJ_NAME} ALL DEPENDS ${SRC} SOURCES ${SRC})
 # copy the contents of the test directory to build/interfaces/python
 
 foreach(PYTHON_FILE ${SRC})
-add_custom_command(TARGET ${PROJ_NAME} POST_BUILD
-                   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-                   COMMAND ${CMAKE_COMMAND}
-                   -E copy ${PYTHON_FILE} ${CMAKE_CURRENT_BINARY_DIR})
+        configure_file(${PYTHON_FILE} ${PYTHON_FILE} COPYONLY)
 endforeach()
 
 # add the python test to the cmake suite of tests
