--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -13,8 +13,5 @@ add_custom_target(${PROJ_NAME} ALL DEPENDS ${SRC} SOURCES ${SRC})
 
 # copy contents of scripts directory to build/scripts
 foreach(SCRIPT_FILE ${SRC})
-add_custom_command(TARGET ${PROJ_NAME} POST_BUILD
-                   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} 
-                   COMMAND ${CMAKE_COMMAND}
-                   -E copy ${SCRIPT_FILE} ${CMAKE_CURRENT_BINARY_DIR})
+    configure_file(${SCRIPT_FILE} ${SCRIPT_FILE} COPYONLY)
 endforeach()                   
