More name changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# cmake file for Embedded Machine Learning Library sub projects
+# cmake file for Embedded Learning Library sub projects
 #
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
