Changed .json extension to .model or .map

--- a/.gitignore
+++ b/.gitignore
@@ -236,6 +236,7 @@ dist/
 build/
 build_clang/
 build_xcode/
+build_linux/
 
 interfaces/javascript/ell_module/CMakeFiles/
 interfaces/javascript/ell_module/test/js/Testing/
