--- a/interfaces/javascript/ell_module/package.json
+++ b/interfaces/javascript/ell_module/package.json
@@ -11,8 +11,8 @@
     "build:linux": "npm run build && npm run copy:linux",
     "build:test": "node-gyp rebuild",
     "copy:mac": "source copyMacLib.sh",
-    "copy:linux":". ./copyLinuxLib.sh",
-    "copy:win":"copyWindowsLib",
+    "copy:linux": ". ./copyLinuxLib.sh",
+    "copy:win": "copyWindowsLib",
     "preinstall": "",
     "preuninstall": "rm -rf build/*"
   },
@@ -32,5 +32,8 @@
   "gypfile": true,
   "dependencies": {
     "nan": "^2.4.0"
+  },
+  "devDependencies": {
+    "libxslt": "^0.6.3"
   }
 }
