moved generic container from emitters to utiliites

--- a/libraries/utilities/CMakeLists.txt
+++ b/libraries/utilities/CMakeLists.txt
@@ -38,6 +38,7 @@ set (INCLUDE include/AbstractInvoker.h
              include/CommandLineParser.h
              include/CompressedIntegerList.h
              include/ConformingVector.h
+             include/DynamicArray.h
              include/Exception.h
              include/Files.h
              include/Format.h
@@ -68,6 +69,7 @@ set (TCC tcc/AbstractInvoker.tcc
          tcc/AnyIterator.tcc
          tcc/Archiver.tcc
          tcc/CommandLineParser.tcc
+         tcc/DynamicArray.tcc
          tcc/Exception.tcc
          tcc/Format.tcc
          tcc/FunctionUtils.tcc
