--- a/interfaces/CMakeLists.txt
+++ b/interfaces/CMakeLists.txt
@@ -5,6 +5,11 @@ include (CommonInterfaces)
 
 # Get include directories for LLVM
 include (LLVMSetup)
+if(LLVM_FOUND)
+    include_directories(${LLVM_INCLUDE_DIRS})
+    add_definitions(${LLVM_DEFINITIONS})
+    add_compile_options(${LLVM_COMPILE_OPTIONS})
+endif()
 
 set (INTERFACE_MAIN ../common/ELL.i)
 
