Removed automatic downloading of nuget.exe and nuget packages.

--- a/.gitignore
+++ b/.gitignore
@@ -229,8 +229,9 @@ yotta_targets/
 /Testing/
 
 # ELL External Dependencies
-external/llvm/include/
-external/llvm/lib/
+external/**
+!external/README.md
+
 swig/
 dist/
 build/
