--- a/tools/trainers/CMakeLists.txt
+++ b/tools/trainers/CMakeLists.txt
@@ -4,6 +4,6 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
 
-add_subdirectory(sgdTrainer)
+add_subdirectory(linearTrainer)
 add_subdirectory(forestTrainer)
 add_subdirectory(sweepingSGDTrainer)
